<?xml version="1.0"?>
<!--
    Copyright (c) 2019, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent-ws</artifactId>
        <version>3</version>
    </parent>

    <groupId>org.gridsuite</groupId>
    <artifactId>gridsuite-geo-data</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>Geo data</name>
    <description>Geographical data management</description>
    <url>http://www.gridsuite.org/</url>

    <licenses>
        <license>
            <name>Mozilla Public License, Version 2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/gridsuite/geo-data-store.git</connection>
        <developerConnection>scm:git:https://github.com/gridsuite/geo-data-store.git</developerConnection>
        <url>https://github.com/gridsuite/geo-data-store</url>
    </scm>

    <developers>
        <developer>
            <name>Chamseddine BENHAMED</name>
            <email>chamseddine.benhamed@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>geo-data-distribution</module>
        <module>geo-data-server</module>
        <module>geo-data-extensions</module>
    </modules>

    <properties>
        <java.version>11</java.version>

        <gridsuite-dependencies.version>4</gridsuite-dependencies.version>
        <commons-lang3.version>3.9</commons-lang3.version>

        <sonar.coverage.jacoco.xmlReportPaths>
            ../geo-data-distribution/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>

        <sonar.exclusions>
            **/generated/**/*
        </sonar.exclusions>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- overrides of imports -->

            <!-- imports -->
            <dependency>
                <groupId>org.gridsuite</groupId>
                <artifactId>gridsuite-dependencies</artifactId>
                <version>${gridsuite-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- project specific dependencies -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>proxy</id>
            <activation>
              <property>
                <name>proxyHost</name>
              </property>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <configuration>
                                <systemPropertyVariables>
                                    <proxyHost>${proxyHost}</proxyHost>
                                    <proxyPort>${proxyPort}</proxyPort>
                                    <proxyUser>${proxyUser}</proxyUser>
                                    <proxyPassword>${proxyPassword}</proxyPassword>
                                    <jdk.http.auth.tunneling.disabledSchemes></jdk.http.auth.tunneling.disabledSchemes>
                                </systemPropertyVariables>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>
